# start-ios-tauri-fullstack

./: .env  Cargo.toml  PREREQUISITES.md  README.md  reset_db.sh  run_android.sh  run_ios.sh  ui_config.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs  routes.rs  shell.rs
app/src/common/: app_state.rs
app/src/components/: mod.rs  reload_button.rs
app/src/components/demos/: demo_button_reactive.rs  mod.rs
app/src/components/hooks/: mod.rs
app/src/components/navigation/: app_bottom_nav.rs  header.rs  mod.rs  theme_toggle.rs
app/src/components/ui/: bottom_nav.rs  empty.rs  mod.rs  skeleton.rs
app/src/domain/: mod.rs
app/src/domain/settings/: mod.rs  page_settings.rs
app/src/domain/template/: mod.rs  page.rs  template_db.rs  template_services.rs
app/src/domain/template/components/: mod.rs  template_form.rs  template_list.rs
app/src/utils/: mod.rs  param.rs  query.rs
migrations/: 20250316131000_create_templates_table.sql
server/: Cargo.toml
server/src/: fallback.rs  main.rs
server/src/app_router/: build_app_router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
style/: tailwind.css
